# sorti

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: docker-pr.yml  docker-publish.yml  docker-test-and-publish.yml  docker.yml  test.yml
sorti/: config.example.yaml  main.py
tests/: conftest.py  test_main.py
